fix(<TopHeader />): lower the 'z-index' property
This commit lowers the 'z-index' property of the <TopHeader />
component so that the modal window has higher z-index than TopHeader.

With this change, the modal component and the backdrop associated with
it will always have a higher priority than the TopHeader component.

--- a/client/src/components/TopHeader/TopHeader.module.css
+++ b/client/src/components/TopHeader/TopHeader.module.css
@@ -6,7 +6,7 @@
     top: 0;
     background: #273c99;
     transition: 0.5s background ease;
-    z-index: 999;
+    z-index: 997;
     display: flex;
     align-items: center;
 }
